--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "moment": "^2.29.1",
-    "vuepress": "^1.9.5"
+    "vuepress": "^1.9.5",
+    "vuepress-plugin-demo-code": "^0.6.0"
   },
   "dependencies": {}
 }
