--- a/package.json
+++ b/package.json
@@ -10,5 +10,20 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "serve": "vitepress serve docs"
+  },
+  "dependencies": {
+    "@vue/theme": "^1.0.0",
+    "vitepress": "^0.21.6",
+    "vue": "^3.2.28"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "react",
+        "react-dom",
+        "@types/react"
+      ]
+    }
   }
 }
