--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+BeatEdit Pr 2.1.003
 辣椒教材汇总/BLENDER OCTANE教程/第1篇 起始篇/OC金属球(sRgb类型).blend
 辣椒教材汇总/BLENDER OCTANE教程/第1篇 起始篇/OC金属球(显示设备无类型).blend
 辣椒教材汇总/BLENDER OCTANE教程/第1篇 起始篇/空白默认场景.blend
