--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,17 +10,17 @@ jobs:
   # job-id:
   build-and-deploy:
     name: 构建并部署
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      # 获取源码
-      - name: Checkout
-        uses: actions/checkout@master
+    # 获取源码
+    - name: Checkout
+      uses: actions/checkout@master
 
-      # 构建并部署
-      - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@master
-        env:
-          ACCESS_TOKEN: ${{ secrets.MY_COURSE_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/.vitepress/dist
-          BUILD_SCRIPT: npm install && npm run build:docs
+    # 构建并部署
+    - name: Build and Deploy
+      uses: JamesIves/github-pages-deploy-action@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.MY_COURSE_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: docs/.vitepress/dist
+        BUILD_SCRIPT: npm install && npm run build:docs
