--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
@@ -19,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "axios": "^0.27.2",
     "marked": "^4.0.18",
+    "ph-slider": "^0.1.0-beta.0",
     "pinia": "^2.0.16",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
@@ -36,6 +36,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.0.0",
     "express": "^4.18.1",
+    "jest": "^29.3.1",
     "jsdom": "^20.0.0",
     "nodemon": "^2.0.19",
     "postcss": "^8.4.14",
