--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "marked": "^4.0.18",
     "ph-slider": "^0.1.0-beta.0",
     "pinia": "^2.0.16",
+    "sass": "^1.56.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
