--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "marked": "^4.0.18",
     "ph-slider": "^0.1.0-beta.0",
     "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "sass": "^1.56.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
