--- a/package.json
+++ b/package.json
@@ -6,48 +6,24 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "test:unit": "vitest --environment jsdom",
-    "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
-    "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.4",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "marked": "^4.0.18",
     "ph-slider": "^0.1.0-beta.0",
     "pinia": "^2.0.16",
     "pinia-plugin-persistedstate": "^3.0.1",
-    "sass": "^1.56.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^3.0.1",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/test-utils": "^2.0.2",
-    "autoprefixer": "^10.4.8",
-    "body-parser": "^1.20.0",
-    "cypress": "^10.3.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.0.0",
-    "express": "^4.18.1",
-    "jest": "^29.3.1",
-    "jsdom": "^20.0.0",
-    "nodemon": "^2.0.19",
-    "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
-    "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.1.7",
+    "typescript": "^4.9.4",
     "vite": "^3.0.1",
-    "vitepress": "^1.0.0-alpha.28",
-    "vitest": "^0.18.1"
+    "vitepress": "^1.0.0-alpha.28"
   }
 }
