--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.13",
     "@vitejs/plugin-vue": "^3.0.1",
     "typescript": "^4.9.4",
     "vite": "^3.0.1",
