--- a/.github/workflows/buil_doc.yml
+++ b/.github/workflows/buil_doc.yml
@@ -15,6 +15,12 @@ jobs:
       # 获取源码
       - name: Checkout
         uses: actions/checkout@v3
+      
+      # 安装 pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
 
       # 安装 node
       - name: Setup node
@@ -22,15 +28,15 @@ jobs:
         with:
           node-version: '16.x'
           # 缓存依赖项
-          cache: 'npm'
+          cache: 'pnpm'
 
       # 安装依赖项
       - name: Install
-        run: npm i
+        run: pnpm i
 
       # 打打包文档
       - name: Build docs
-        run: npm run docs:build
+        run: pnpm run docs:build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
